--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,20 @@ services:
     image: slavic454/service-issue-tracker-backend:0.0.2
     container_name: service-issue-tracker-backend
     hostname: service-issue-tracker-backend
+    depends_on:
+      - mongo
     volumes:
       - ./pm2.json:/pm2.json
     ports:
       - 8299:8299
+    networks:
+      - issue-tracker
+  service-issue-tracker-frontend:
+    image: slavic454/service-issue-tracker-frontend:0.0.1
+    container_name: service-issue-tracker-frontend
+    hostname: service-issue-tracker-frontend
+    ports:
+      - 8300:80
     networks:
       - issue-tracker
 networks:
